# magritte

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  docker-compose.yml  justfile
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: release-bot.yml  rust.yml
macro_helpers/: Cargo.toml
macro_helpers/src/: lib.rs
magritte_core/: Cargo.toml
magritte_core/src/: lib.rs
magritte_core/src/graph/: mod.rs
magritte_core/src/types/: mod.rs  range.rs  record.rs  return_type.rs  schema.rs  value.rs
magritte_core/src/vector_search/: mod.rs
magritte_db/: Cargo.toml
magritte_db/src/: lib.rs
magritte_db/src/executor/: mod.rs
magritte_db/src/executor/core/: mod.rs  types.rs
magritte_db/src/executor/utils/: metrics.rs  query_batcher.rs
magritte_macros/: Cargo.toml  LICENSE-MIT  README.md
magritte_macros/src/: conversion.rs  lib.rs
magritte_macros/src/derives/: attributes.rs  column.rs  conversion.rs  edge.rs  entity.rs  event.rs  index.rs  mod.rs  relation.rs  table.rs
magritte_macros/src/strum/: enum_iter.rs
magritte_macros/src/strum/helpers/: type_props.rs
magritte_macros/tests/functional/: mod.rs  table.rs
magritte_macros/tests/unit/: edge.rs  mod.rs  relations.rs  table.rs  table_events.rs  table_indexes.rs
magritte_migrations/: Cargo.toml  LICENSE-APACHE  README.md
magritte_migrations/src/: bin.rs  edge.rs  error.rs  introspection.rs  lib.rs  main.rs  manager.rs  migrator.rs  schema.rs  snapshot.rs  table.rs  types.rs
magritte_migrations/src/diff/: edge.rs  mod.rs  table.rs
magritte_migrations/src/schema/: snapshot.rs
magritte_migrations/src/test_models/: mod.rs
magritte_migrations/tests/: cli.rs  introspection.rs  migration.rs  stmt_gen.rs
magritte_query/: Cargo.toml
magritte_query/src/: lib.rs  types.rs
magritte_query/src/backend/: conditions.rs  expr.rs  from.rs  graph.rs  mod.rs  query_builder.rs  query_result.rs  returns.rs  transaction.rs  types.rs  value.rs  vector_search.rs  wheres.rs
magritte_query/src/backend/types/: field_type.rs  index.rs  order.rs  permission.rs  projection.rs  range.rs  record.rs  return_type.rs  schema.rs  uuid.rs
magritte_query/src/database/: mod.rs  runtime.rs  rw.rs  scheduler.rs
magritte_query/src/database/executor/: async_std_executor.rs  future_executor.rs  impl_executor.rs  may_executor.rs  mod.rs  tokio_executor.rs
magritte_query/src/database/executor/core/: config.rs  mod.rs  types.rs
magritte_query/src/database/executor/utils/: metrics.rs  query_batcher.rs
magritte_query/src/define/: mod.rs
magritte_query/src/define/access/: mod.rs
magritte_query/src/define/analyzer/: mod.rs
magritte_query/src/define/config/: mod.rs
magritte_query/src/define/database/: mod.rs
magritte_query/src/define/event/: mod.rs
magritte_query/src/define/field/: mod.rs
magritte_query/src/define/function/: mod.rs
magritte_query/src/define/index/: common.rs  define.rs  delete.rs  mod.rs
magritte_query/src/define/namespace/: mod.rs
magritte_query/src/define/param/: mod.rs
magritte_query/src/define/table/: define.rs  define_edge.rs  define_table.rs  mod.rs
magritte_query/src/define/token/: mod.rs
magritte_query/src/define/user/: mod.rs
magritte_query/src/func/: array.rs  bytes.rs  count.rs  crypto.rs  duration.rs  geometry.rs  http.rs  math.rs  meta.rs  mod.rs  not.rs  object.rs  parse.rs  rand.rs  record.rs  search.rs  session.rs  sleep.rs  string.rs  time_fn.rs  typ_e.rs  value.rs  vector.rs
magritte_query/src/query/: alter.rs  create.rs  delete.rs  info.rs  insert.rs  mod.rs  relate.rs  select.rs  update.rs  upsert.rs
src/: defs.rs  lib.rs  migration.rs  prelude.rs  snapshot.rs  test_util.rs
src/database/: mod.rs  runtime.rs  rw.rs  scheduler.rs
src/database/executor/: may_executor.rs  mod.rs  tokio_executor.rs
src/database/pool/: config.rs  connection.rs  credentials.rs  manager.rs  mod.rs
src/entity/: base.rs  cache.rs  column.rs  edge.rs  event.rs  index.rs  mod.rs  relation.rs  table.rs
src/entity/manager/: cache.rs  macros.rs  mod.rs  registry.rs  unsafe_em.rs
src/entity_crud/: mod.rs
tests/unit/: alter.rs  create.rs  delete.rs  mod.rs  select.rs
