[package]
name = "magritte"
version = "0.1.0"
edition = "2021"
description = "A powerful ORM with QueryBuilder for SurrealDB, inspired by SeaORM"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
documentation = "https://docs.rs/magritte"
readme = "README.md"
keywords = ["surrealdb", "database", "orm"]
categories = ["database", "development-tools"]

[dependencies]
async-stream = { version = "0.3", default-features = false }
async_executors = "0.7.0"
async-channel = "2.3.1"
async-trait = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"], optional = true}
tokio-util ={ version = "0.7.13", features = ["full"], optional = true}
structured-spawn = { version = "1.0.1",optional = true }
magritte_macros = { version = "0", path = "magritte_macros", default-features = false }
magritte_query = { version = "0", path = "magritte_query", default-features = false }
surrealdb = { version = "2", features = ["default","scripting",] }
futures = { version = "0.3", default-features = false, features = ["std", "thread-pool"] }
futures-util = { version = "0.3.31",features = ["std"] }
log = { version = "0.4", default-features = false }
may = { version = "0.3.48",features = ["default"],optional = true }
glommio = { version = "0.9.0",features = ["debugging"],optional = true }
async-std = { version = "1.13.0",features = ["default", "attributes"],optional = true }
moka = { version = "0.12.8",features = ["default","future"] }
deadpool = { version = "0.12.1", features = ["rt_tokio_1", "serde"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0.3"
anyhow = "1.0"
strum = { version = "0.26.3",features = ["derive"] }
chrono = { version = "0.4.30", default-features = false, optional = true }
time = { version = "0.3.36", default-features = false, optional = true }
rust_decimal = { version = "1.36.0", optional = true }
bigdecimal = { version = "0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }

inventory = "0.3.15"
cfg-if = "1.0.0"
num_cpus = "1.16.0"
[dev-dependencies]
criterion = "0.5.1"
inferno = "0"
futures = { version = "0.3" }
tokio = { version = "1.6", features = ["full"] }
maplit = { version = "1" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
pretty_assertions = { version = "1.4.1" }
time = { version = "0.3.36", features = ["macros"] }
uuid = { version = "1", features = ["v4","v6"] }
magritte_query = { path = "magritte_query", features = ["tests-cfg"] }


[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["tests-cfg"]


[features]
default = [
    "with-json",
    "with-uuid",
]
mock = ["surrealdb/arbitrary"]
proxy = ["serde_json", "serde/derive"]
with-json = ["serde_json", "chrono?/serde", "rust_decimal?/serde", "bigdecimal?/serde", "uuid?/serde", "time?/serde"]
with-chrono = ["chrono","magritte_query/with-chrono", "magritte_macros/with-chrono"]
with-rust_decimal = ["rust_decimal", "magritte_query/with-rust_decimal", "magritte_macros/with-rust_decimal"]
with-bigdecimal = ["bigdecimal", "magritte_macros/with-bigdecimal", "magritte_query/with-bigdecimal"]
with-uuid = ["uuid", "magritte_macros/uuid", "magritte_query/uuid"]
with-time = ["time", "magritte_query/with-time", "magritte_macros/with-time"]
with-geo = ["geo", "magritte_query/with-geo", "magritte_macros/with-geo"]
with-native-tls = ["surrealdb/native-tls"]
with-rustls = ["surrealdb/rustls",]
rt-tokio = ["tokio", "structured-spawn", "tokio-util"]
rt-async-std = ["async-std"]
rt-glommio = ["glommio"]
rt-may = ["may"]
tests-cfg = ["serde/derive",]
full = ["default", "with-rustls"]