[package]
name = "magritte"
version = "0.1.0"
edition = "2021"
description = "A powerful ORM with QueryBuilder for SurrealDB, inspired by SeaORM"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
documentation = "https://docs.rs/magritte"
readme = "README.md"
keywords = ["surrealdb", "database", "orm"]
categories = ["database", "development-tools"]

[dependencies]
async-trait = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"], optional = true}
tokio-util ={ version = "0.7.13", features = ["full"], optional = true}
structured-spawn = { version = "1.0.1",optional = true }
magritte_macros = { version = "0", path = "magritte_macros", default-features = false }
magritte_query = { version = "0", path = "magritte_query", default-features = false }
surrealdb = { version = "^2.1.4", features = ["default","scripting",] }
async-std = { version = "1.13.0",features = ["default", "attributes"],optional = true }
moka = { version = "0.12.8",features = ["default","future"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0.3"
anyhow = "1.0"
strum = { version = "0.26.3",features = ["derive"] }
chrono = { version = "0.4.30", default-features = false, optional = true }
time = { version = "0.3.36", default-features = false, optional = true }
rust_decimal = { version = "1.36.0", optional = true }
bigdecimal = { version = "0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }

inventory = "0.3.15"
cfg-if = "1.0.0"

[dev-dependencies]
criterion = "0.5.1"
inferno = "0"
futures = { version = "0.3" }
tokio = { version = "1.6", features = ["full"] }
maplit = { version = "1" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
pretty_assertions = { version = "1.4.1" }
time = { version = "0.3.36", features = ["macros"] }
uuid = { version = "1", features = ["v4","v6"] }
magritte_query = { path = "magritte_query", features = ["tests-cfg"] }
futures-locks = "0.7.1"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["tests-cfg"]


[features]
default = [
    "with-json",
    "with-uuid",
]
mock = ["surrealdb/arbitrary"]
proxy = ["serde_json", "serde/derive"]
with-json = ["serde_json", "chrono?/serde", "rust_decimal?/serde", "bigdecimal?/serde", "uuid?/serde", "time?/serde"]
with-chrono = ["chrono","magritte_query/with-chrono", "magritte_macros/with-chrono"]
with-rust_decimal = ["rust_decimal", "magritte_query/with-rust_decimal", "magritte_macros/with-rust_decimal"]
with-bigdecimal = ["bigdecimal", "magritte_macros/with-bigdecimal", "magritte_query/with-bigdecimal"]
with-uuid = ["uuid", "magritte_macros/uuid", "magritte_query/uuid"]
with-time = ["time", "magritte_query/with-time", "magritte_macros/with-time"]
with-native-tls = ["surrealdb/native-tls"]
with-rustls = ["surrealdb/rustls",]
rt-tokio = ["tokio", "structured-spawn", "tokio-util"]
rt-async-std = ["async-std"]
tests-cfg = ["serde/derive",]
full = ["default", "with-rustls"]