[workspace]
members = [
    "magritte_core",
    "magritte_query",
    "magritte_db",
    "magritte_macros",
    "magritte_migrations",
    "macro_helpers",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-std = { version = "1.13.0", features = ["default", "attributes"] }
async-trait = { version = "0.1", default-features = false }
bigdecimal = { version = "0.4" }
bytes = "1.9.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.30", default-features = false }
criterion = "0.7.0"
futures = { version = "0.3" }
futures-locks = "0.7.1"
geo = { version = "0.31.0" }
inventory = "0.3.15"
log = { version = "0.4", default-features = false }
maplit = { version = "1" }
moka = { version = "0.12.8", features = ["default", "future"] }
pretty_assertions = { version = "1.4.1" }
rand = { version = "0.9.2", features = ["default"] }
rust_decimal = { version = "1.36.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10.8"
structured-spawn = { version = "1.0.1" }
strum = { version = "0.27.2", features = ["derive"] }
surrealdb = { version = "^2.1.4", features = ["default", "scripting"] }
thiserror = "2.0.17"
time = { version = "0.3.36", default-features = false }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["v4", "v7"] }

magritte = { path = ".", version = "0.1.0" }
magritte_core = { path = "magritte_core", version = "0.1.0" }
magritte_query = { path = "magritte_query", version = "0.1.0" }
magritte_db = { path = "magritte_db", version = "0.1.0" }
magritte_macros = { path = "magritte_macros", version = "0.1.0" }
magritte_migrations = { path = "magritte_migrations", version = "0.1.0" }
macro_helpers = { path = "macro_helpers", version = "0.1.0" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.bench]
debug = true

[package]
name = "magritte"
version = "0.1.0"
edition = "2021"
description = "A powerful ORM with QueryBuilder for SurrealDB, inspired by SeaORM"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
documentation = "https://docs.rs/magritte"
readme = "README.md"
keywords = ["surrealdb", "database", "orm"]
categories = ["database", "development-tools"]

[dependencies]
async-trait = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-util = { workspace = true, features = ["full"], optional = true }
structured-spawn = { workspace = true, optional = true }
magritte_macros = { workspace = true, default-features = false }
magritte_query = { workspace = true, default-features = false }
magritte_core = { workspace = true }
surrealdb = { workspace = true, features = ["default", "scripting"] }
async-std = { workspace = true, features = ["default", "attributes"], optional = true }
moka = { workspace = true, features = ["default", "future"] }
tracing = { workspace = true, features = ["attributes", "log"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true, features = ["derive"] }
chrono = { workspace = true, default-features = false, optional = true }
time = { workspace = true, default-features = false, optional = true }
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
geo = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "v7"], optional = true }
inventory = { workspace = true }
cfg-if = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
maplit = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
pretty_assertions = { workspace = true }
time = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4", "v7"] }
magritte_query = { workspace = true, features = ["tests-cfg"] }
futures-locks = { workspace = true }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["tests-cfg"]

[features]
default = [
    "with-json",
    "with-uuid",
]
proxy = ["serde_json",]
with-json = ["serde_json"]
with-chrono = ["chrono",]
with-rust_decimal = ["rust_decimal"]
with-bigdecimal = ["bigdecimal"]
with-uuid = ["uuid"]
with-time = ["time"]
rt-tokio = ["tokio", "structured-spawn", "tokio-util"]
rt-async-std = ["async-std"]
tests-cfg = []
