[package]
name = "magritte_core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the Magritte ORM"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"

[dependencies]
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
uuid = { workspace = true, optional = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
surrealdb = { workspace = true }

[features]
default = []
with-uuid = ["default", "uuid"]