[package]
name = "magritte_db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
serde_json = { version = "1", default-features = false, optional = false, features = ["std"] }
tracing = "0.1.41"
async-trait = "0.1.83"
surrealdb = { version = "2", features = ["default"] }
serde = { version = "1.0.215", features = ["derive"] }
bigdecimal = { version = "0", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3.36", optional = true }
deadpool-surrealdb = { git = "https://github.com/sengokudaikon/deadpool",features = ["rt_tokio_1", "serde"] }
log = { version = "0.4", default-features = false }
dashmap = "6.1.0"
tokio = "1.41.1"
tracing-subscriber = "0.3.19"