[package]
name = "magritte_db"
version = "0.1.0"
edition = "2021"
description = "Database connection and pooling for the Magritte ORM"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tracing = { workspace = true }
async-trait = { workspace = true }
surrealdb = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["derive"] }
bigdecimal = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
geo = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "v7"], optional = true }
chrono = { workspace = true, features = ["serde"], optional = true }
time = { workspace = true, optional = true }
deadpool-surrealdb = { git = "https://github.com/sengokudaikon/deadpool", features = ["rt_tokio_1", "serde"] }
log = { workspace = true }
dashmap = "6.1.0"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]