[package]
name = "magritte_macros"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniil Zavrin <hanamik0@proton.me>",
]
description = "Derive macros for magritte"
[lib]
proc-macro = true
[dependencies]
anyhow = "1.0.94"
quote = "1"
proc-macro2 = { version = "1.0",features = ["default"] }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
heck = "0.5.0"
deluxe = { version = "0.5",features = ["full"] }
strum = { version = "0.26.3", features = ["derive"] }
magritte_query = {path = "../magritte_query"}
pretty_assertions = "1.4.1"
surrealdb = { version = "2", features = ["default"] }
bigdecimal = { version = "0", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3.36", optional = true }
serde = "1"
serde_json = "1"
tokio = "1.41.1"
[dev-dependencies]
magritte= { path = "..", features = ["tests-cfg"] }
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "2.1.2", features = ["kv-mem"] }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["full"]

[[test]]
name = "functional"
path = "tests/functional/mod.rs"
required-features = ["full"]

[features]
default = []
full = ["default","uuid","geo"]
with-chrono = ["default","chrono"]
with-time = ["default","time"]
with-rust_decimal = ["default","rust_decimal"]
with-bigdecimal = ["default","bigdecimal"]