[package]
name = "magritte_macros"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniil Zavrin <hanamik0@proton.me>",
]
description = "Derive macros for magritte"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
documentation = "https://docs.rs/magritte_macros"
readme = "README.md"
keywords = ["surrealdb", "macros", "derive", "database"]
categories = ["database", "development-tools"]

[lib]
proc-macro = true
[dependencies]
anyhow = "1.0.94"
quote = "1"
proc-macro2 = { version = "1.0",features = ["default"] }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
heck = "0.5.0"
deluxe = { version = "0.5",features = ["full"] }
strum = { version = "0.26.3", features = ["derive"] }
pretty_assertions = "1.4.1"
surrealdb = { version = "2", features = ["default"] }
regex = "1.10.3"
bigdecimal = { version = "0", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3.36", optional = true }
serde = "1"
serde_json = "1"
tokio = "1.41.1"
macro_helpers = {path = "../macro_helpers"}
magritte_core = {path = "../magritte_core"}
inventory = "0.3.15"
[dev-dependencies]
magritte= { path = "..", features = ["tests-cfg"] }
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "2.1.2", features = ["kv-mem"] }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["full"]

[[test]]
name = "functional"
path = "tests/functional/mod.rs"
required-features = ["full"]

[features]
default = []
full = ["default","with-geo","with-uuid"]
with-chrono = ["default","chrono"]
with-time = ["default","time"]
with-rust_decimal = ["default","rust_decimal"]
with-bigdecimal = ["default","bigdecimal"]
with-geo = ["default","geo"]
with-uuid = ["default","uuid"]