[package]
name = "magritte_macros"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniil Zavrin <hanamik0@proton.me>",
]
description = "Derive macros for magritte"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
documentation = "https://docs.rs/magritte_macros"
readme = "README.md"
keywords = ["surrealdb", "macros", "derive", "database"]
categories = ["database", "development-tools"]

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
quote = "1"
proc-macro2 = { version = "1.0", features = ["default"] }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
heck = "0.5.0"
deluxe = { version = "0.5", features = ["full"] }
strum = { workspace = true, features = ["derive"] }
pretty_assertions = { workspace = true }
surrealdb = { workspace = true, features = ["default"] }
regex = "1.10.3"
bigdecimal = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
geo = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "v7"], optional = true }
chrono = { workspace = true, features = ["serde"], optional = true }
time = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
macro_helpers = { workspace = true }
magritte_core = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
magritte = { workspace = true, features = ["tests-cfg"] }
serde = { workspace = true, features = ["derive"] }
surrealdb = { workspace = true, features = ["kv-mem"] }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
required-features = ["full"]

[[test]]
name = "functional"
path = "tests/functional/mod.rs"
required-features = ["full"]

[features]
default = []
full = ["default", "with-geo", "with-uuid"]
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]