[package]
name = "magritte_migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.6"
serde_json = "1.0.133"
magritte = {path = ".."}
serde = "1.0.216"
console = { version = "0.15.8" }
indicatif = { version = "0.17.9" }
clap = { version = "4.3", features = ["env", "derive"] }
inventory = "0.3.15"
tempfile = "3.14.0"
surrealdb = "2"
tokio = { version = "1",features = ["default"] }
anyhow = "1.0.94"
strum = "0.26.3"
chrono = { version = "0.4.30", default-features = false, optional = true }
time = { version = "0.3.36", default-features = false, optional = true }
rust_decimal = { version = "1.36.0", optional = true }
bigdecimal = { version = "0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }

[[test]]
name = "tests"
path = "tests"
[features]
default=[]
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]