[package]
name = "magritte_migrations"
version = "0.1.0"
edition = "2021"
description = "A schema migration tool for SurrealDB"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
documentation = "https://docs.rs/magritte_migrations"
readme = "README.md"
keywords = ["surrealdb", "migrations", "schema", "database", "orm"]
categories = ["database", "development-tools"]

[dependencies]
thiserror = "2.0.6"
serde_json = "1.0.133"
magritte = {path = ".."}
serde = "1.0.216"
clap = { version = "4.3", features = ["env", "derive"] }
inventory = "0.3.15"
surrealdb = { version = "2",features = ["kv-mem"] }
tokio = { version = "1",features = ["default"] }
anyhow = "1.0.94"
strum = "0.26.3"
chrono = { version = "0.4.30", default-features = false, optional = true }
time = { version = "0.3.36", default-features = false, optional = true }
rust_decimal = { version = "1.36.0", optional = true }
bigdecimal = { version = "0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }
tracing = "0.1.41"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.14.0"
[[test]]
name = "tests"
path = "tests"
[features]
default=[]
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]