[package]
name = "magritte_migrations"
version = "0.1.0"
edition = "2021"
description = "A schema migration tool for SurrealDB"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
documentation = "https://docs.rs/magritte_migrations"
readme = "README.md"
keywords = ["surrealdb", "migrations", "schema", "database", "orm"]
categories = ["database", "development-tools"]

[dependencies]
thiserror = { workspace = true }
serde_json = { workspace = true }
magritte = { workspace = true }
serde = { workspace = true }
clap = { version = "4.3", features = ["env", "derive"] }
inventory = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio = { workspace = true, features = ["default"] }
anyhow = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true, default-features = false, optional = true }
time = { workspace = true, default-features = false, optional = true }
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
geo = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "v7"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.14.0"

[[test]]
name = "tests"
path = "tests"

[features]
default = []
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]