[package]
name = "magritte_query"
version = "0.1.0"
authors = [
    "Daniil Zavrin <hanamik0@proton.me>",
]
edition = "2021"
description = "A dynamic query builder for SurrealDB, inspired by SeaQuery"
license = "MIT OR Apache-2.0"

categories = ["database"]
keywords = ["database", "surrealdb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "magritte_query"
path = "src/lib.rs"

[dependencies]
serde_json = { version = "1", default-features = false, optional = false, features = ["std"] }
tracing = "0.1.41"
async-trait = "0.1.83"
anyhow = "1.0.93"
surrealdb = { version = "2", features = ["default"] }
serde = { version = "1.0.215", features = ["derive"] }
strum = "0.26.3"
bytes = "1.9.0"
bigdecimal = { version = "0", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3.36", optional = true }
rand = { version = "0.8.5",features = ["default", "serde1"] }
futures = "0.3.31"
deadpool-surrealdb = { git = "https://github.com/sengokudaikon/deadpool",features = ["rt_tokio_1", "serde"] }
log = { version = "0.4", default-features = false }
dashmap = "6.1.0"
num_cpus = "1.16.0"
thiserror = "2.0.11"
futures-util = { version = "0.3.31",features = ["std"] }
futures-concurrency = { version = "7.6.2"  }
tokio = "1.41.1"
tracing-subscriber = "0.3.19"
crossbeam-channel = "0.5.13"
crossbeam-utils = "0.8.19"
structured-spawn = "1.0.1"
[profile.bench]
debug = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
flamegraph = "0.6.7"
tokio = { version = "1.43.0",features = ["full"] }

[features]
thread-safe = []
tests-cfg = []
default = [
    "thread-safe",
]
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]