[package]
name = "magritte_query"
version = "0.1.0"
authors = [
    "Daniil Zavrin <hanamik0@proton.me>",
]
edition = "2021"
description = "A dynamic query builder for SurrealDB, inspired by SeaQuery"
license = "MIT OR Apache-2.0"

categories = ["database"]
keywords = ["database", "surrealdb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "magritte_query"
path = "src/lib.rs"

[dependencies]
serde_json = { version = "1", default-features = false, optional = false, features = ["std"] }
tracing = "0.1.41"
async-trait = "0.1.83"
anyhow = "1.0.93"
surrealdb = { version = "2", features = ["default"] }
serde = { version = "1.0.215", features = ["derive"] }
strum = "0.26.3"
bytes = "1.9.0"
bigdecimal = { version = "0", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
geo = { version = "0.29.2",optional = true }
uuid = { version = "1.11.0", features = ["v4","v6"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3.36", optional = true }
rand = { version = "0.8.5",features = ["default", "serde1"] }
log = { version = "0.4", default-features = false }
thiserror = "2.0.11"
magritte_core = {path = "../magritte_core"}
magritte_db = { path = "../magritte_db"}
[profile.bench]
debug = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
flamegraph = "0.6.7"
tokio = { version = "1.43.0",features = ["full"] }

[features]
tests-cfg = []
default = []
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]