[package]
name = "magritte_query"
version = "0.1.0"
authors = [
    "Daniil Zavrin <hanamik0@proton.me>",
]
edition = "2021"
description = "A dynamic query builder for SurrealDB, inspired by SeaQuery"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/magritte"
categories = ["database"]
keywords = ["database", "surrealdb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "magritte_query"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true, features = ["std"] }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
surrealdb = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
bytes = { workspace = true }
bigdecimal = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
geo = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "v7"], optional = true }
chrono = { workspace = true, features = ["serde"], optional = true }
time = { workspace = true, optional = true }
rand = { workspace = true, features = ["default"] }
log = { workspace = true }
thiserror = { workspace = true }
magritte_core = { workspace = true }
magritte_db = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["full"] }

[features]
tests-cfg = []
default = []
with-chrono = ["default", "chrono"]
with-time = ["default", "time"]
with-rust_decimal = ["default", "rust_decimal"]
with-bigdecimal = ["default", "bigdecimal"]
with-geo = ["default", "geo"]
with-uuid = ["default", "uuid"]